refactor datetimeconverter